tests/ui/parser/doc-comment-in-generic-tuple-type.rs
struct Foo {
    a: Vec<(
        /// Docstring
        //~^ ERROR expected type, found doc comment
        f32,
        f32,
    )>,
}

fn main() {}
